fix dark mode I

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -346,14 +346,16 @@ form{
 }
 
 .herotxt1{
+    margin-top: 5px;
     color: $base-color;
     font-size: 23px;
-    margin-top: 14px;
+    
 }
 
 .herotxt2{
+    margin-top: 5px;
     font-size: 23px;
-    margin-top: 14px;
+    
     color: $base-color2;
 }
 
